# folder-tree-exporter

./: CHANGELOG.md  README.md  benchmark.py  benchmark.sh  pyproject.toml  tree-export.spec
.github/workflows/: release.yml
src/folder_tree_exporter/: __init__.py  cli.py
