[project]
name = "folder-tree-exporter"
version = "0.2.0"
description = "Export directory structure as ASCII tree to clipboard or file"
dependencies = [
    "pyperclip>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
tree-export = "folder_tree_exporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.14.2",
    "psutil>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/folder_tree_exporter"]
